core/foam.css
/* ... */
div.gridtile td div {
  height: 5.5ex;
  font-size: 90%;
  line-height: 100%;
}

div.gridViewControl {
  padding: 5px;
  background: rgb(235, 239, 249);
  border-color: rgb(187, 187, 187);
  border-style: solid;
  border-width: 1px;
}

div.gridViewControl select {
  margin-bottom: 6px;
  font-family: arial, sans-serif;
  font-size: 10px;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  color: rgb(0, 0, 0);
  outline-color: rgb(223, 215, 207);
  background-color: rgb(221, 221, 221);
}

.gridBy th {
  background: #eeeeee;
  border: 1px solid #ccc;
  border-spacing: 2px;
  font-family: arial, sans-serif;
  font-size: 13px;
  font-style: normal;
  font-variant: normal;
  font-weight: bold;
  padding: 2px;
  text-align: left;
}

.gridBy td {
  vertical-align: top;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  padding: 4px;
}

.idcount {
  color: #0000cc;
  text-decoration: underline;
  font: 82% arial,sans-serif;
}

.idlist {
  color: #0000cc;
  text-decoration: underline;
  font: 82% arial,sans-serif;
}


.buttonify {
  font-size: 100%;
  background: url("//ssl.gstatic.com/codesite/ph/images/button-bg.gif") repeat-x scroll left top #e3e3e3;
  background: -webkit-gradient(linear,0% 40%,0% 70%,from(#f9f9f9),to(#e3e3e3));
  background: -moz-linear-gradient(top,#fff,#ddd);
  vertical-align: baseline;
  padding: 1px 3px 1px 3px;
  border: 1px solid #aaa;
  border-top-color: #ccc;
  border-bottom-color: #888;
  border-radius: 3px;
  cursor: pointer;
  text-decoration: none;
}

.mode_button_active
{
  background: url("//ssl.gstatic.com/codesite/ph/images/button-bg.gif") repeat-x scroll left bottom #bbb;
  background: -webkit-gradient(linear,0% 40%,0% 70%,from(#e3e3e3),to(#f9f9f9));
  background: -moz-linear-gradient(top,#e3e3e3,#f9f9f9);
  border-color: #aaa;
}

.capsule_right {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}
.capsule_left {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.altViewButtons {
  margin-right: 17px;
  float: right;
}

/* ----------- ArrayTileView ----------- */
.arrayTileView {
  margin: 0;
  width: 100%;
  padding: 0px;
  display: inline-block;
  border-bottom: 2px inset;
}

.arrayTileItem {
  display: inline-block;
  list-style-type: none;
  margin: 2px 2px;
}

.arrayTileLastView {
  display: inline-block;
  margin: 0;
  list-style-type: none;
  vertical-align: 7px;
}

/* ----------- ListInputView ----------- */
.listInputView {
  width: 100%;
  border: none;
  padding: 1px 0 1px 8px;
  outline: none;
  height: 36px;
}

/* ----------- AutocompleteListView ----------- */
.autocompleteListView {
  position: absolute;
  padding: 8px;
  margin: 0px;
  width: 300px;
  background: white;
  border-radius: 5px;
  border: 1px solid lightgrey;
  z-index: 10;
}

.autocompleteListItem {
  border: 1px solid transparent;
  border-radius: 3px;
  list-style-type: none;
  overflow: hidden;
}

.autocompleteSelectedItem {
  border: 1px solid #99e;
}

/* ----------- Rich Text View ----------- */
.richtext {
  overflow: hidden;
  position: relative;
}

.richtext iframe {
  background: white;
  height: 100%;
  position: absolute;
}

.dropzone {
  -webkit-box-orient: vertical;
  border: 4px dashed #ddd;
  box-sizing: border-box;
  color: #ddd;
  display: -webkit-box;
  font: 270% arial,sans-serif;
  height: 94%;
  margin: 7px;
  position: absolute;
  text-align: center;
  width: 95%;
  z-index: -1;
}

.dropzone .spacer {
  -webkit-box-flex: 1;
}

::-webkit-input-placeholder {
  color: #999;
  font-family: Arial;
  font-size: 13px;
  font-weight: normal;
}

.richtext .placeholder {
  color: #999;
  font-family: Arial;
  font-size: 13px;
  padding: 6px;
  position: absolute;
  z-index: 2;
}

.linkDialog {
  border: 1px solid;
  border-color: #bbb #bbb #a8a8a8;
  padding: 8px;
  z-index: 2;
  background: white;
}


.linkDialog .actionButton-insert {
  background: #4d90fe;
  border-radius: 3px;
  box-shadow: none;
  color: white;
  margin-left: 7px;
  padding: 10px 16px;
  text-shadow: none;
}

.linkDialog input  {
  height: 32px;
  padding-left: 8px;
  margin: 2px;
  border: 1px solid #d9d9d9 !important;
}

.linkDialog input[name="label"] {
  width: 99%;
}

.linkDialog th {
  font: normal 15px arial,sans-serif;
  padding-right: 10px;
}

.actionButton:disabled { color: #bbb; -webkit-filter: grayscale(0.8); }

.editColumnView {
  font-size: 80%;
  font-weight: normal;
}
.editColumnView td {
  color: #0000cc;
  font-size: 80%;
  font-weight: normal;
  padding: 1px;
  text-align2: left;
}

.multiLineStringRemove {
  float: right;
}


.column {
  display: flex;
  flex-direction: column;
}

.row {
  display: flex;
}

.expand {
  flex: 1 1 auto;
}

.rigid {
  flex: none;
}

.waiting * {
  cursor: wait;
  /* Without setting some other style attribute, the cursor doesn't show.
     This seems like a bug.
   */
  x-unused: white;
}

input.clickToEnableEdit:not(:focus) {
  border: none;
  background-color: inherit;
}

/* ChoiceListView */
.foamChoiceListView {
  list-style-type: none;
}

.foamChoiceListView .selected {
  font-weight: bold;
}

.foamChoiceListView.vertical {
  padding: 0;
}
.foamChoiceListView.vertical .choice {
  margin: 4px;
}

.foamChoiceListView.horizontal {
  padding: 0;
}
.foamChoiceListView.horizontal .choice {
  display: inline;
  margin: 12px;
}

.swipeAltOuter {
  display: flex;
  overflow: hidden;
  min-width: 240px;
  width: 100%;
}
.swipeAltSlider {
  position: relative;
  width: 100%;
  top: 0px;
  -webkit-transform: translate3d(0,0,0);
}
.swipeAltInner {
  position: absolute;
  top: 0px;
  height: 100%;
  overflow: scroll;
  width: 100%;
}

.galleryView {
  text-align: center;
}

.galleryView .swipeAltInner {
  overflow: hidden;
}

.galleryCirclesOuter {
  float: left;
  text-align: center;
  position: relative;
  width: 100%;
  bottom: 20px;
}
/* ... */

